--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "gsap": "^3.13.0",
     "joi": "^17.13.3",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-responsive": "^10.0.1",
     "tailwindcss": "^4.1.7",
     "three": "^0.176.0"
   },
