--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.11.0",
     "gsap": "^3.13.0",
     "joi": "^17.13.3",
     "react": "^19.1.0",
@@ -26,6 +27,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-responsive": "^10.0.1",
+    "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.7",
     "three": "^0.176.0"
   },
