--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@gsap/react": "^2.1.2",
+    "@hookform/resolvers": "^5.2.1",
     "@mui/material": "^7.1.0",
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
@@ -25,11 +26,12 @@
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.4",
+    "react-hook-form": "^7.62.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.7",
-    "three": "^0.176.0"
+    "three": "^0.176.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
