--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ESNext", // or at least "ES2017"
-    "lib": ["DOM", "ES2015"], // add ES2015 or newer (ES2017/ES2020)
+    "target": "ES5",
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "moduleResolution": "Node",
     "strict": true,
